# langgraph-cloud

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  config.py
app/api/: __init__.py  adapter.py  deps.py  main.py  routes.py
app/client_sdk/: __init__.py  cli.py  websocket_client.py
app/domain/: __init__.py  interfaces.py  schemas.py
app/infrastructure/: __init__.py  database.py  event_store.py  kafka_producer.py  sqlite_bus.py  sqlite_repository.py  workflow_repo.py
app/service/: task_service.py
app/workflow/: __init__.py  builder.py  checkpointer.py  executor.py
docs/: multi-task-orchestration-spec.md  plan-client-adapter.md  plan-orchestration-contract.md  sprint-scenario-design.md
raw/langgraph-integration/: 2026-04-20-langgraph-cloud-client-contract.md
raw/planning-artifacts/: 自动询比价智能体-PRD-总览.md  自动询比价智能体-供应商组维护-PRD.md  自动询比价智能体-供应商组维护-原型.html  自动询比价智能体-系统管理-PRD.md  自动询比价智能体-系统管理-原型.html  自动询比价智能体-询价单详情-PRD.md  自动询比价智能体-询价单详情-原型.html  自动询比价智能体-询比价首页-PRD.md  自动询比价智能体-询比价首页-原型.html  自动询比价智能体-采购员信息维护-PRD.md  自动询比价智能体-采购员信息维护-原型.html
scripts/: __init__.py  run_client.py  run_server.py
tests/: conftest.py
tests/e2e/: __init__.py  test_adapter_kafka_e2e.py  test_polling_mode.py  test_websocket_mode.py  test_workflow_version_upgrade.py
tests/integration/: test_adapter.py  test_api_endpoints.py  test_inquiry_workflow.py  test_task_service.py  test_websocket.py
tests/unit/: test_config.py  test_database.py  test_event_store.py  test_inquiry_workflow.py  test_interfaces.py  test_kafka_producer.py  (+5 more)
wiki/: index.md  log.md
(+9 files in other folders)
