[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-cloud"
version = "0.1.0"
description = "LangGraph cloud service with local client integration for Human-in-the-Loop scenarios"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "langgraph>=0.0.40",
    "langchain-core>=0.1.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
